--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+   <div class="container">
+    <p class=""><a href="index.html">Go back</a></p>
 
-    <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+    <div class="switcher-container">
+      <button class="switcher-button" type="button" data-start>Start</button>
+      <button class="switcher-button" type="button" data-stop>Stop</button>
+    </div>
+   </div>
 
     <script src="js/01-color-switcher.js" type="module"></script>
   </body>
