Feat(HTML, CSS,JS) Add task 2

--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <div class="container">
-    <p class=""><a href="index.html">Go back</a></p>
+    <p><a href="index.html">Go back</a></p>
 
     <div class="switcher-container">
       <button class="switcher-button" type="button" data-start>Start</button>
