--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <div class="container">
+      <p><a href="index.html">Go back</a></p>
 
-    <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <div class="timer-container">
+      <input class="timer-picker" type="text" id="datetime-picker" />
+    <button class="start-btn" type="button" data-start>Start</button>
+    </div>
 
     <div class="timer">
       <div class="field">
@@ -29,6 +32,7 @@
         <span class="value" data-seconds>00</span>
         <span class="label">Seconds</span>
       </div>
+    </div>
     </div>
 
     <script src="js/02-timer.js" type="module"></script>
