--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <div class="container">
+      <p><a href="index.html">Go back</a></p>
 
     <form class="form">
       <label>
@@ -24,6 +25,7 @@
       </label>
       <button type="submit">Create promises</button>
     </form>
+    </div>
 
     <script src="js/03-promises.js" type="module"></script>
   </body>
